--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/react-dom": "^19.1.2",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/uuid": "^10.0.0",
+    "prettier": "3.5.3",
     "react-scripts": "^5.0.1",
     "typescript": "^4.9.5"
   }
