--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "uuid": "^11.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node scripts/start.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
