--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@blocknote/react": "^0.28.0",
     "@svgr/webpack": "^8.1.0",
     "babel-preset-react-app": "^10.1.0",
-    "eslint": "^9.25.0",
+    "eslint": "^8.0.0",
     "jest": "^29.7.0",
     "openai": "^4.94.0",
     "react": "^19.1.0",
@@ -26,8 +26,9 @@
     "workbox-webpack-plugin": "^7.3.0"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "dev": "node scripts/dev.js",
     "build": "react-scripts build",
+    "start": "node scripts/start.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -55,8 +56,10 @@
     "@types/react-dom": "^19.1.2",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/uuid": "^10.0.0",
+    "eslint-config-react-app": "^7.0.1",
     "prettier": "^3.5.3",
     "react-scripts": "^5.0.1",
+    "serve": "^14.2.1",
     "typescript": "^5.8.3"
   }
 }
