--- a/package.json
+++ b/package.json
@@ -4,26 +4,15 @@
   "private": true,
   "dependencies": {
     "@azure/openai": "^2.0.0",
-    "@babel/core": "^7.26.10",
-    "@babel/plugin-syntax-flow": "^7.26.0",
-    "@babel/plugin-transform-class-properties": "^7.25.9",
-    "@babel/plugin-transform-react-jsx": "^7.25.9",
     "@blocknote/core": "^0.28.0",
     "@blocknote/mantine": "^0.28.0",
     "@blocknote/react": "^0.28.0",
-    "@svgr/webpack": "^8.1.0",
-    "babel-preset-react-app": "^10.1.0",
-    "eslint": "^8.0.0",
-    "jest": "^29.7.0",
     "openai": "^4.94.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.6.1",
-    "uuid": "^11.1.0",
-    "webpack": "^5.99.6",
-    "webpack-dev-server": "^5.2.1",
-    "workbox-webpack-plugin": "^7.3.0"
+    "uuid": "^11.1.0"
   },
   "scripts": {
     "dev": "node scripts/dev.js",
@@ -60,6 +49,17 @@
     "prettier": "^3.5.3",
     "react-scripts": "^5.0.1",
     "serve": "^14.2.1",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "@babel/core": "^7.26.10",
+    "@babel/plugin-syntax-flow": "^7.26.0",
+    "@babel/plugin-transform-class-properties": "^7.25.9",
+    "@babel/plugin-transform-react-jsx": "^7.25.9",
+    "@svgr/webpack": "^8.1.0",
+    "babel-preset-react-app": "^10.1.0",
+    "eslint": "^8.0.0",
+    "jest": "^29.7.0",
+    "webpack": "^5.99.6",
+    "webpack-dev-server": "^5.2.1",
+    "workbox-webpack-plugin": "^7.3.0"
   }
 }
