--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "dev": "node scripts/dev.js",
     "build": "react-scripts build",
     "start": "node scripts/start.js",
-    "lint": "prettier . --check",
+    "lint": "prettier . --write",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
