--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "dependencies": {
     "@azure/openai": "^2.0.0",
-    "@blocknote/core": "^0.28.0",
-    "@blocknote/mantine": "^0.28.0",
-    "@blocknote/react": "^0.29.1",
+    "@blocknote/core": "0.29.1",
+    "@blocknote/mantine": "0.29.1",
+    "@blocknote/react": "0.29.1",
     "openai": "^4.94.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
