refactor: update Dockerfile label name from mtkllm-sdk to agent-canvas for clarity

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM nikolaik/python-nodejs:python3.10-nodejs20 AS builder
 
 LABEL maintainer="Wei-Cheng Lee <ds_wei-cheng.lee@mediatek.com>" \
-    org.label-schema.name="mtkllm-sdk" \
+    org.label-schema.name="agent-canvas" \
     org.label-schema.vendor="Wei-Cheng Lee" \
     org.label-schema.schema-version="1.0" \
     com.centurylinklabs.watchtower.stop-signal="SIGINT"
