--- a/.github/ISSUE_TEMPLATE/EXPERIMENT.yml
+++ b/.github/ISSUE_TEMPLATE/EXPERIMENT.yml
@@ -62,8 +62,8 @@ body:
     attributes:
       label: Code Snippets or Links
       description:
-        Include any relevant code snippets or links to code, datasets, or
-        notebooks used in the experiment.
+        Include any relevant code snippets or links to code, datasets, or notebooks used in the
+        experiment.
       placeholder: "The following code snippet was used to..."
     validations:
       required: false
