--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -35,11 +35,8 @@ jobs:
           - name: Build and Push Images (Latest / Release)
             target_step: prod
             tag:
-              ${{ secrets.DOCKER_URL }}/${{ env.DOCKER_ORG }}/${{
-              github.event.repository.name }}
-            gitea_tag:
-              gitea.mediatek.inc/mcts_research/${{ github.event.repository.name
-              }}
+              ${{ secrets.DOCKER_URL }}/${{ env.DOCKER_ORG }}/${{ github.event.repository.name }}
+            gitea_tag: gitea.mediatek.inc/mcts_research/${{ github.event.repository.name }}
 
     steps:
       - name: Disable SSL Verify
@@ -65,14 +62,6 @@ jobs:
         with:
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Update Version
-        shell: bash
-        run: |
-          VERSION=$(uvx dunamai from git --bump --no-metadata --style pep440)
-          uvx --from=toml-cli toml set --toml-path=pyproject.toml project.version $VERSION
-          echo "VERSION=$VERSION" >> $GITHUB_ENV
-          echo "GITHUB_SHA=${GITHUB_SHA}" >> $GITHUB_ENV
 
       - name: Login to the Container registry
         uses: docker/login-action@v3.4.0
@@ -116,10 +105,10 @@ jobs:
           file: ./docker/Dockerfile
           target: ${{ matrix.target.target_step }}
           build-args: ${{ matrix.target.build_args }}
-          labels: ${{ env.VERSION }}
+          labels: ${{ github.sha }}
           tags: |
             ${{ matrix.target.tag }}:latest
-            ${{ matrix.target.tag }}:${{ env.VERSION }}
+            ${{ matrix.target.tag }}:${{ github.sha }}
           sbom: false
           provenance: false
           cache-from: type=registry,ref=${{ matrix.target.tag }}:buildcache
