--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -109,9 +109,10 @@ jobs:
           tags: |
             ${{ matrix.target.tag }}:latest
             ${{ matrix.target.tag }}:${{ github.sha }}
+            ${{ matrix.target.gitea_tag }}:latest
+            ${{ matrix.target.gitea_tag }}:${{ github.sha }}
           sbom: false
           provenance: false
           cache-from: type=registry,ref=${{ matrix.target.tag }}:buildcache
           cache-to:
-            type=registry,ref=${{ matrix.target.tag
-            }}:buildcache,image-manifest=true,oci-mediatypes=true,mode=max
+            type=registry,ref=${{ matrix.target.tag }}:buildcache,image-manifest=true,oci-mediatypes=true,mode=max
