--- a/.prettierrc
+++ b/.prettierrc
@@ -12,5 +12,6 @@
   "singleQuote": false,
   "tabWidth": 2,
   "trailingComma": "all",
-  "useTabs": false
+  "useTabs": false,
+  "ignorePath": [".github/**/*"]
 }
