--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@blocknote/core": "0.29.1",
     "@blocknote/mantine": "0.29.1",
     "@blocknote/react": "0.29.1",
+    "@types/prismjs": "^1.26.5",
     "openai": "^4.94.0",
+    "prismjs": "^1.30.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
