fix: enhance canvas task handling with two-step code generation and explanation

--- a/.prettierrc
+++ b/.prettierrc
@@ -12,6 +12,5 @@
   "singleQuote": false,
   "tabWidth": 2,
   "trailingComma": "all",
-  "useTabs": false,
-  "ignorePath": [".github/**/*"]
+  "useTabs": false
 }
