--- a/.github/ISSUE_TEMPLATE/EXPERIMENT.yml
+++ b/.github/ISSUE_TEMPLATE/EXPERIMENT.yml
@@ -61,9 +61,7 @@ body:
     id: code-snippets
     attributes:
       label: Code Snippets or Links
-      description:
-        Include any relevant code snippets or links to code, datasets, or notebooks used in the
-        experiment.
+      description: Include any relevant code snippets or links to code, datasets, or notebooks used in the experiment.
       placeholder: "The following code snippet was used to..."
     validations:
       required: false
