--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -16,8 +16,9 @@ on:
     tags:
       - v*
 
+permissions: write-all
+
 env:
-  DOCKER_ORG: srv-aith
   BUILDKIT_NO_CLIENT_TOKEN: 1 # docker buildkit env
   # gitea action download node.js skip certificate !https
   NODE_TLS_REJECT_UNAUTHORIZED: 0
@@ -26,7 +27,8 @@ jobs:
   build_images:
     name: Build and Push Images
     runs-on: ubuntu-latest
-    container: catthehacker/ubuntu:act-22.04 # Uncomment it if you use it on Gitea
+    if: github.server_url != 'https://github.com'
+    container: catthehacker/ubuntu:act-22.04  # Uncomment it if you use it on Gitea
 
     strategy:
       fail-fast: true
@@ -34,27 +36,11 @@ jobs:
         target:
           - name: Build and Push Images (Latest / Release)
             target_step: prod
-            tag:
-              ${{ secrets.DOCKER_URL }}/${{ env.DOCKER_ORG }}/${{ github.event.repository.name }}
+            tag: ${{ secrets.DOCKER_URL }}/srv-aith/${{ github.event.repository.name }}
 
     steps:
       - name: Disable SSL Verify
         run: git config --global http.sslVerify false
-
-      - name: Setup MTK Certification
-        uses: https://gitea.mediatek.inc/actions/mtk-cert-action@v1.2.0
-
-      - name: Setup SSH Key
-        uses: shimataro/ssh-key-action@v2.7.0
-        with:
-          key: ${{ secrets.SSH_KEY }}
-          name: id_rsa
-          known_hosts: unnecessary
-          config: |
-            Host *
-              StrictHostKeyChecking no
-              UserKnownHostsFile=/dev/null
-          if_key_exists: replace
 
       - name: Checkout
         uses: actions/checkout@v4
@@ -96,7 +82,7 @@ jobs:
               [worker.oci.environmentfile]
                 GIT_SSL_NO_VERIFY = "true"
 
-      - name: Build and Push Image
+      - name: ${{ matrix.target.name }}
         uses: docker/build-push-action@v6
         with:
           push: true
@@ -111,5 +97,59 @@ jobs:
           sbom: false
           provenance: false
           cache-from: type=registry,ref=${{ matrix.target.tag }}:buildcache
-          cache-to:
-            type=registry,ref=${{ matrix.target.tag }}:buildcache,image-manifest=true,oci-mediatypes=true,mode=max
+          cache-to: type=registry,ref=${{ matrix.target.tag }}:buildcache,image-manifest=true,oci-mediatypes=true,mode=max
+
+  build_images_github:
+    name: Build and Push Images
+    runs-on: ubuntu-latest
+    if: github.server_url == 'https://github.com'
+    # container: catthehacker/ubuntu:act-22.04  # Uncomment it if you use it on Gitea
+
+    strategy:
+      fail-fast: true
+      matrix:
+        target:
+          - name: Build and Push Images (Latest / Release)
+            target_step: prod
+            tag: ghcr.io/mai0313/${{ github.event.repository.name }}
+
+    steps:
+      - name: Disable SSL Verify
+        run: git config --global http.sslVerify false
+
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Login to the Container registry
+        uses: docker/login-action@v3.4.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Setup docker context for buildx
+        run: |
+          docker context create builders || docker context use builders
+
+      - name: Set up Docker BuildX
+        uses: docker/setup-buildx-action@v3
+
+      - name: ${{ matrix.target.name }}
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          context: .
+          file: ./docker/Dockerfile
+          target: ${{ matrix.target.target_step }}
+          build-args: ${{ matrix.target.build_args }}
+          labels: ${{ github.sha }}
+          tags: |
+            ${{ matrix.target.tag }}:latest
+            ${{ matrix.target.tag }}:${{ github.sha }}
+          sbom: false
+          provenance: false
+          cache-from: type=registry,ref=${{ matrix.target.tag }}:buildcache
+          cache-to: type=registry,ref=${{ matrix.target.tag }}:buildcache,image-manifest=true,oci-mediatypes=true,mode=max
