--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@azure/openai": "^2.0.0",
+    "@blocknote/code-block": "^0.29.1",
     "@blocknote/core": "0.29.1",
     "@blocknote/mantine": "0.29.1",
     "@blocknote/react": "0.29.1",
