--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   },
   "scripts": {
     "dev": "node scripts/dev.js",
-    "build": "react-scripts build",
+    "build": "react-app-rewired build",
     "start": "node scripts/start.js",
     "lint": "prettier . --write",
-    "test": "react-scripts test",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -31,23 +31,13 @@
       "react-app/jest"
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
   "devDependencies": {
     "@babel/core": "^7.26.10",
+    "@babel/plugin-proposal-unicode-property-regex": "^7.18.6",
     "@babel/plugin-syntax-flow": "^7.26.0",
     "@babel/plugin-transform-class-properties": "^7.25.9",
     "@babel/plugin-transform-react-jsx": "^7.25.9",
+    "@babel/plugin-transform-unicode-property-regex": "^7.27.1",
     "@svgr/webpack": "^8.1.0",
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.2",
@@ -59,6 +49,7 @@
     "eslint-config-react-app": "^7.0.1",
     "jest": "^29.7.0",
     "prettier": "^3.5.3",
+    "react-app-rewired": "^2.2.1",
     "react-scripts": "^5.0.1",
     "serve": "^14.2.1",
     "typescript": "^5.8.3",
